<resources>
    <string name="app_name">Finance Tracker</string>

    <!-- Registration Screen Texts -->
    <string name="title_signup">Sign Up</string>
    <string name="subtitle_signup">Nexora</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="login_redirect">Already have an account? Login</string>

    <string name="title_signin">Sign In</string>

    <string name="btn_login">Login</string>
    <string name="register_redirect">Don’t have an account? Sign Up</string>
    <string name="passwordInput">passwordInput</string>

</resources>
