<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <!-- Top Header -->

    <!-- Form Fields -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="2dp"
        android:background="#350CAF"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_signup"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_signup"
            android:textColor="#CCCCCC"
            android:textSize="20dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#BB86FC"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#BB86FC"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#BB86FC"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/confirmPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#BB86FC"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#888888" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="127dp"
            android:layout_height="58dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#350CAF"
            android:text="@string/btn_register"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/loginRedirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_redirect"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
